Version 1.1.1:

    * fix a bug in snpgdsVCF2GDS when 'method="biallelic.only"'
    * add 'snpgdsVCF2GDS_R' for the R implementation
    * fix a bug in snpgdsBED2GDS if 'family=TRUE'


Version 0.99.1 - 0.99.3:

    * an option to create an integer snp.id when converting from PLINK
    * a new function 'snpgdsFst' to estimate Fst
    * minor fixes


Version 0.99.0:

    * initial submission to Bioconductor
    * moving from CRAN to Bioconductor

    * fully support long vectors (>= R v3.0)
    * >5x speedup in the function 'snpgdsVCF2GDS'
    * SNP GDS format allows character-type chromosome codes
    * add a new argument 'ref.allele' in 'snpgdsVCF2GDS'
    * add new functions 'snpgdsOpen' and 'snpgdsClose'
    * add a new function 'snpgdsTranspose' to transpose the genotypic matrix
    * add a new function 'snpgdsAlleleSwitch' to switch alleles if needed
    * add a new function 'snpgdsApartSelection'
    * add a new function 'snpgdsGEN2GDS' to import Oxford GEN data
    * use NA instead of 3 as missing value in 'snpgdsGetGeno'
    * add a new argument 'snpfirstdim' in the function 'snpgdsGDS2BED'
    * add a new argument 'with.id' in the functions 'snpgdsSNPRateFreq' and 'snpgdsSampMissRate'
    * return a numeric vector instead of data.frame in 'snpgdsLDpair'
    * add estimating nine Jacquard's coefficients in 'snpgdsIBDMLE'
    * fix the memory issues reported by valgrind


Changes in 0.9.16 - 0.9.19:

    * avoid compiler issues when the version of R < v3.0
    * minor fixes in 'snpgdsIBDSelection': allow non-character-type sample IDs and missing IBD coefficients


Changes in 0.9.15:

    * improve 'snpgdsIBDKING' to avoid misleading arguments and examples
    * improve 'snpgdsIBDSelection'
    * the names of column 'sample1', 'sample2' and 'kinshipcoeff' are changed to 'ID1', 'ID2' and 'kinship' in the output of 'snpgdsIBDSelection'


Changes in 0.9.14:

    * 'snpgdsGDS2BED' gives a warning if the allele information is missing