@@ -3,6 +3,7 @@ Version 1.1.1:
     * fix a bug in snpgdsVCF2GDS when 'method="biallelic.only"'
     * add 'snpgdsVCF2GDS_R' for the R implementation
     * fix a bug in snpgdsBED2GDS if 'family=TRUE'
+    * 'snpgdsGDS2BED' allows the file name of GDS
 
 
 Version 0.99.1 - 0.99.3:
